prevent table header word wrap

--- a/client/src/components/pages/visualization/visualization.scss
+++ b/client/src/components/pages/visualization/visualization.scss
@@ -88,3 +88,7 @@ div.react-bootstrap-table-pagination-list {
 ul.pagination.react-bootstrap-table-page-btns-ul {
   margin-left: auto;
 }
+
+th {
+  white-space: nowrap;
+}
